--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 				<div class="footer_content">
 					<div class="container">
 						<p>Copyright © 2021. All rights reserved. <br />
-						Designed &amp; Developed by <a class="fn__link" href=" target=_blank">Sharon Mathew</a></p>
+						Designed &amp; Developed by <a class="fn__link" href="#home">Sharon Mathew</a></p>
 					</div>
 				</div>
 			</footer>
@@ -518,8 +518,8 @@
 			<div class="nav_footer">
 				<div class="fn__social">
 					<ul>
-						<li><a href="https://www.instagram.com/s_h_a_r.o.n/" target="_blank"><img src="svg/social/facebook.svg" alt="" class="fn__svg"></a></li>
-						<li><a href="https://github.com/Sharonbinoy" target="_blank"><img src="svg/social/instagram.svg" alt="" class="fn__svg"></a></li>
+						<li>Instagram <a href="https://www.instagram.com/s_h_a_r.o.n/" target="_blank"><img src="img/instagram.png" alt="" class="fn__svg"></a></li>
+						<li>Github <a href="https://github.com/Sharonbinoy" target="_blank"><img src="img/github.png" alt="" class="fn__svg"></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
