--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<div class="about_right">
 									<!-- Download CV Button -->
 									<div class="resumo_fn_cv_btn">
-										<a href="img/cv.jpg" download>
+										<a href="cv.pdf" download>
 											<span class="icon">
 												<img src="svg/inbox.svg" alt="" class="fn__svg" />
 												<img src="svg/arrow.svg" alt="" class="fn__svg arrow" />
