--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 							<div class="resumo_fn_main_title">
 								<h3 class="subtitle">Contact</h3>
 								<h3 class="title">Get In Touch</h3>
-								<p class="desc">If you have any suggestion, project or even you want to say “hello”, please fill out the form below and I will reply you shortly.</p>
+								<p class="desc">If you have any suggestion, project or even you want to say “hello”, please do call or text me and I will reply you shortly.</p>
 							</div>
 							<!-- /Main Title -->
 
