--- a/index.html
+++ b/index.html
@@ -86,13 +86,10 @@
 								<img src="" alt="">
 							</div>
 							<!-- /Main Title -->
-
 						</div>
 					</div>
 				</section>
 				<!-- /Home Section -->
-
-
 				<!-- About Section -->
 				<section id="about">
 					<div class="container">
@@ -123,8 +120,12 @@
 											<th>21 years</th>
 										</tr>
 										<tr>
-											<th>Address</th>
+											<th>Work Address</th>
 											<th>Kakkanad,Cochin,Kerala</th>
+										</tr>
+										<tr>
+											<th>Permenent Address</th>
+											<th>Kalpetta,Wayanad,Kerala</th>
 										</tr>
 										<tr>
 											<th>Phone</th>
@@ -193,7 +194,7 @@
 															<span></span>
 														</div>
 														<h3>Commercial Design</h3>
-														<p>I've created Web site's for<a  href="https://powertechgym.com/"> <span style="color:#987750; font-style: italic;"> Power Tech Gym</span></a><a  href="https://smartfinnservices.com/"> <span style="color:#987750; font-style: italic;"> ,Smartfinn Services</span></a> </p>
+														<p>I've created Web site's for<a  href="https://powertechgym.com/"> <span style="color:#987750; font-style: italic;"> Power Tech Gym</span></a><a  href="https://smartfinnservices.com/"> <span style="color:#987750; font-style: italic;"> ,Smartfinn Services</span></a><a  href="http://lightseeker.epizy.com/?i=1"> <span style="color:#987750; font-style: italic;"> ,Lightseekers Photography</span></a><a  href="https://dmaxhomecinemas.com/"> <span style="color:#987750; font-style: italic;"> ,Dmax Home Cinemas</span></a> </p>
 													
 													</div>
 												</li>
@@ -341,7 +342,7 @@
 									</div>
 									<div class="title_holder">
 										<p>Consultancy</p>
-										<h3><a href="#">Smartfinn Services</a></h3>
+										<h3><a href="https://smartfinnservices.com/">Smartfinn Services</a></h3>
 									</div>
 									<div class="fn__hidden">
 										<p class="fn__cat">Consultancy Services</p>
@@ -365,7 +366,7 @@
 									</div>
 									<div class="title_holder">
 										<p>Free Lance</p>
-										<h3><a href="#">Power Tech Gym</a></h3>
+										<h3><a href="https://powertechgym.com/">Power Tech Gym</a></h3>
 									</div>
 									<div class="fn__hidden">
 										<p class="fn__cat">Free Lance</p>
@@ -378,6 +379,52 @@
 											language Used -HTML,CSS,JS,BootStrap,jquery,PHP<br>
 											Website for a fitness center located in Cochin
 											<p>Click here for more about <a  href="https://powertechgym.com/"> <span style="color:#987750; font-style: italic;"> Power Tech Gym</span></a> </p>
+										</p>
+									</div>
+								</div>
+								<div class="item modal_item" data-index="2">
+									<div class="img_holder">
+										<img src="img/thumb/square.jpg" alt="">
+										<div class="abs_img" data-bg-img="img/portfolio/4.jpg"></div>
+									</div>
+									<div class="title_holder">
+										<p>Free Lance</p>
+										<h3><a href="http://lightseeker.epizy.com/?i=1">Lightseekers Photography</a></h3>
+									</div>
+									<div class="fn__hidden">
+										<p class="fn__cat">Free Lance</p>
+										<h3 class="fn__title">Lightseekers Photography</h3>
+										<div class="img_holder">
+											<img src="img/thumb/square.jpg" alt="">
+											<div class="abs_img" data-bg-img="img/portfolio/4.jpg"></div>
+										</div>
+										<p class="fn__desc">Project name- Lightseekers photography<br>
+											language Used -HTML,CSS,JS,BootStrap,jquery,PHP<br>
+											Website for an event photography team located in Cochin
+											<p>Click here for more about <a  href="http://lightseeker.epizy.com/?i=1"> <span style="color:#987750; font-style: italic;"> Lightseekers Photography</span></a> </p>
+										</p>
+									</div>
+								</div>
+								<div class="item modal_item" data-index="2">
+									<div class="img_holder">
+										<img src="img/thumb/square.jpg" alt="">
+										<div class="abs_img" data-bg-img="img/portfolio/5.jpg"></div>
+									</div>
+									<div class="title_holder">
+										<p>Free Lance</p>
+										<h3><a href="https://dmaxhomecinemas.com/">Dmax Home Cinemas</a></h3>
+									</div>
+									<div class="fn__hidden">
+										<p class="fn__cat">Free Lance</p>
+										<h3 class="fn__title">Dmax Home Cinemas</h3>
+										<div class="img_holder">
+											<img src="img/thumb/square.jpg" alt="">
+											<div class="abs_img" data-bg-img="img/portfolio/5.jpg"></div>
+										</div>
+										<p class="fn__desc">Project name- Dmax Home Cinemas<br>
+											language Used -HTML,CSS,JS,BootStrap,jquery,PHP<br>
+											Website for a home threatre fixing company located in Cochin
+											<p>Click here for more about <a  href="https://dmaxhomecinemas.com/"> <span style="color:#987750; font-style: italic;"> Dmax Home Cinemas</span></a> </p>
 										</p>
 									</div>
 								</div>
@@ -414,7 +461,7 @@
 								<p>Phone</p>
 								<h3><a href="tel:+91 9656675123">Call:9656675123</a></h3>
 								<p>Whatsapp</p>
-								<h3><a href="https://wa.me/919656675123?text=Hello">Chat</a></h3>
+								<h3><a href="https://wa.me/919656675123?text=Hello">Msg Me...</a></h3>
 								<p>Email</p>
 								<h3><a class="fn__custom" href="mailto:sharonbinoy283840@gmail.com">sharonbinoy283840@gmail.com<span></span></a></h3>
 							</div>
