--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
                                             <!-- Description -->
                                             <div class="resumo_fn_desc">
-                                                <p>A creative designer with a love for minimal design, clean typography and well-written code, located in Kerala. Provide high quality and cost effective offshore web and software development services. Wide
+                                                <p>A creative developer with a love for minimal design, clean typography and well-written code, located in Kerala. Provide high quality and cost effective offshore web and software development services. Wide
                                                     range of web design and web development services.</p>
                                             </div>
 
