--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                     <div class="about_right">
                                         <!-- Download CV Button -->
                                         <div class="resumo_fn_cv_btn">
-                                            <a href="cv.pdf" download>
+                                            <a href="sharon_cv.pdf" download>
                                                 <span class="icon">
 												<img src="svg/inbox.svg" alt="" class="fn__svg" />
 												<img src="svg/arrow.svg" alt="" class="fn__svg arrow" />
