--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                                     <h3 class="subtitle">Introduction</h3>
                                     <h3 class="title">Web Developer</h3>
                                     <p class="desc">I create and develop services while working as a junior web developer at Tenwyn Media & Solutions.</p>
-                                    <img src="" alt="">
+                                    <div class="bg" alt="">
+                                    </div>
                                 </div>
                                 <!-- /Main Title -->
                             </div>
@@ -491,7 +492,7 @@
                                     <p>Phone</p>
                                     <h3><a href="tel:+91 9656675123">Call:9656675123</a></h3>
                                     <p>Whatsapp</p>
-                                    <h3><a href="https://wa.me/919656675123?text=Hello">Msg Me...</a></h3>
+                                    <h3><a href="https://wa.me/919656675123?text=Hello">Msg Me @9656675123</a></h3>
                                     <p>Email</p>
                                     <h3><a class="fn__custom" href="mailto:sharonbinoy283840@gmail.com">sharonbinoy283840@gmail.com<span></span></a></h3>
                                     <p>Github</p>
@@ -502,16 +503,12 @@
                                     <h3><a class=" fn__custom " href="mailto:sharonbinoy283840@gmail.com ">sharonbinoy283840@gmail.com<span></span></a></h3> -->
                                 </div>
                                 <!-- /Contact Info -->
-
                             </div>
                         </div>
                     </section>
                     <!-- /Contact Section -->
-
-
                 </div>
                 <!-- /Page -->
-
 
                 <footer id="footer ">
                     <div class="footer_top ">
@@ -519,7 +516,7 @@
                     </div>
                     <div class="footer_content ">
                         <div class="container ">
-                            <p>Designed &amp; Developed by <a class="fn__link " href="#home ">Sharon Mathew</a></p>
+                            <p>Designed &amp; Developed by <a class="fn__link menu" href="#home ">Sharon Mathew</a></p>
                         </div>
                     </div>
                 </footer>
@@ -532,8 +529,8 @@
             <div class="resumo_fn_right ">
 
                 <!-- Menu Triggger -->
-                <a href="# " class="menu_trigger ">
-                    <span class="text ">Menu</span>
+                <a href="# " class="menu_trigger">
+                    <span class="text call">Menu</span>
                     <span class="hamb ">
 					<span></span>
                     <span></span>
@@ -585,18 +582,18 @@
             <div class="nav_in ">
 
                 <nav id="nav ">
-                    <h3 class="label ">Menu</h3>
+                    <h3 class="label menu ">Menu</h3>
                     <ul>
-                        <li><a href="#home ">Home</a></li>
-                        <li><a href="#about ">About</a></li>
-                        <li><a href="#portfolio ">Portfolio</a></li>
-                        <li><a href="#contact ">Contact</a></li>
+                        <li><a class="call" href="#home ">Home</a></li>
+                        <li><a class="call" href="#about ">About</a></li>
+                        <li><a class="call" href="#portfolio ">Portfolio</a></li>
+                        <li><a class="call" href="#contact ">Contact</a></li>
                     </ul>
                 </nav>
 
                 <div class="nav_footer ">
-                    <div class="copyright ">
-                        Developed by Sharon Mathew
+                    <div class="copyright">
+                        <span class="menu">Developed by Sharon Mathew</span>
                     </div>
                 </div>
 
