--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                                     <h3 class="subtitle">Introduction</h3>
                                     <h3 class="title">Web Developer</h3>
                                     <p class="desc">I create and develop services while working as a junior web developer at Tenwyn Media & Solutions.</p>
-                                    <div class="bg" alt="">
-                                    </div>
+                                    <img src="img\bg.jpg" alt="">
                                 </div>
                                 <!-- /Main Title -->
                             </div>
